@@ -8,6 +8,7 @@ Please send bfast bug reports to nhomer@cs.ucla.edu
 Version 0.1.14
 * Added option in balign to allow local alignment to only consider
 mismatches and color errors.
+* Removed memory leak in balign.
 
 Version 0.1.13
 * Updated bug in RGIndex where reverse read could have n's.
